# ComputerManager

./: .env.example  .gitignore  CHANGELOG.md  PLATFORM_TOOLS_IMPLEMENTATION.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt  run.bat  test_verification_comments.py
.github/workflows/: build-release.yml
assets/: icon.icns
docs/: AGENT_ARCHITECTURE.md  AUTOMATION_TOOLS.md  BUILDING.md  LANGCHAIN_INTEGRATION.md  MODEL_SELECTION.md  SECURITY.md
scripts/: reproduce_crash.py  test_run.ps1  verify_agent.py
src/: main.py
src/agent/: __init__.py  builtin_tools.py  core.py  langchain_bridge.py  tool_registry.py
src/automation/: __init__.py  app_control.py  file_ops.py  keyboard_mouse.py  screen.py
src/automation/platform/: __init__.py  linux.py  macos.py  windows.py
src/gui/: __init__.py  audit_log_viewer.py  chat_window.py  settings_dialog.py  system_tray.py  themes.py
src/ollama/: __init__.py  client.py  model_manager.py  vision.py
src/security/: audit_log.py  confirmation_dialog.py  middleware.py  permissions.py
src/utils/: config.py  system_info.py
tests/: test_agent.py  test_automation.py  test_gui.py  test_langchain_bridge.py  test_model_manager.py  test_ollama_client.py  test_security.py  test_tool_registry.py
