[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-manager"
version = "0.1.0"
description = "AI-powered computer automation assistant using Ollama"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "automation", "ollama", "assistant", "desktop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ollama>=0.6.1",
    "psutil>=5.9.0",
    "py3nvml>=0.2.7",
    "GPUtil>=1.4.0",
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "PyAutoGUI>=0.9.54",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "wikipedia>=1.4.0",
    "duckduckgo-search>=4.0.0",
]

# Update YOUR_USERNAME with your actual GitHub username
[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/computer-manager"
Repository = "https://github.com/YOUR_USERNAME/computer-manager"
Issues = "https://github.com/YOUR_USERNAME/computer-manager/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
